implementando correção de internal server erro quando ambiente não era informado ao buscar um lote.